030-software/fluxcd/apps/tinyauth/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tinyauth
  labels:
    bundle.cert-manager.io/inject-cm: enabled
