030-software/fluxcd/apps/tinyauth/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tinyauth
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: tinyauth
