030-software/fluxcd/apps/tinyauth/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tinyauth
spec:
  hostnames:
  - tinyauth.${domain}
  parentRefs:
  - name: cilium
    namespace: cilium
  rules:
  - backendRefs:
    - name: tinyauth
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
